Fix the toggle button align to center of dropdowns

--- a/src/containers/Synthesis/synthesis.scss
+++ b/src/containers/Synthesis/synthesis.scss
@@ -599,6 +599,9 @@ div.new-supplier-cont > div:nth-child(2) {
 .AddNewSearch__second-column {
   .all-variations {
     margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &__label {
       color: #333333de;
@@ -1108,7 +1111,7 @@ div.new-supplier-cont .ui.button {
 .AddNewSearch__checkbox {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   margin-top: 5px;
 }
 
